syntax = "proto3";
import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

option csharp_namespace = "DemoServer.Services";

package greet;

// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc SayHello(HelloRequest) returns(HelloReply);
  rpc SayTime(GetTimeRequest) returns(GetTimeReply);
  rpc SayIntList(google.protobuf.Empty) returns(GetIntListReply);
  rpc SayIntList2(GetIntListRequest) returns(google.protobuf.Empty);
  rpc SayObjList(GetObjListRequest) returns(GetObjListReply);
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings.
message HelloReply {
  string message = 1;
}

message GetTimeRequest {
  int32 id = 1;
  google.protobuf.Timestamp startTime = 2;
}

message GetTimeReply {
  google.protobuf.Timestamp replyTime = 1;
}

message GetIntListRequest {
  repeated int64 ids = 1;
}

message GetIntListReply {
  repeated int64 ids = 1;
}

message GetObjListRequest {
  repeated CustomerInfo customers = 1;
}

message GetObjListReply {
  repeated CustomerInfo customers = 1;
}

message CustomerInfo {
  int64 id = 1;
  google.protobuf.Timestamp birth = 2;
}